k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asesoria-inmobiliaria
  namespace: asesoria-inmobiliaria
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: asesoriainmobiliariajb.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
    - host: www.asesoriainmobiliariajb.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
